# aiec1

01_Dense_Vector_Retrieval/: .gitignore  01_Cat_Health_Vector_RAG_LangChain_Qdrant.ipynb  README.md  pyproject.toml
02_Agentic_RAG_LangGraph_LangChain/: 01_Cat_Health_Agentic_RAG_LangGraph_LangChain.ipynb
03_Agent_Memory_LangGraph_LangChain/: .env.example  01_Cat_Health_Agent_Memory_LangGraph_LangChain.ipynb  02_Cat_Health_Agent_Memory_From_Scratch.ipynb  pyproject.toml
04_Multi_Agent_Systems/: .env.example  01_Cat_Health_Deep_Research_Multi_Agent_LangChain_LangGraph.ipynb  pyproject.toml
05_Synthetic_Data_Generation_for_RAG_Evals/: .env.example  01_Cat_Health_Synthetic_Data_Generation_Ragas_LangSmith.ipynb  pyproject.toml
06_Agentic_RAG_Evaluation/: .env.example  01_Metal_Price_Agent_Evaluation_Ragas_LangGraph.ipynb  pyproject.toml
07_Advanced_Retrievers/: .env.example  01_Cat_Health_Advanced_Retrieval.ipynb  pyproject.toml
08_MCP/: .env.example  README.md  activity_advanced_mcp_client.ipynb
08_MCP/app/: tools.py
09_Agent_Servers/: .dockerignore  .gitignore  Dockerfile.vercel  README.md  langgraph.json  pyproject.toml  vercel_entrypoint.sh  vercel_port_proxy.py
09_Agent_Servers/frontend/: package-lock.json  package.json
10_LLM_Servers/: README.md
10_LLM_Servers/app/: rag.py
10_LLM_Servers/eval/: pyproject.toml  ragas_eval.ipynb
11_Claude_Code/: README.md
11_Claude_Code/chat-app/: .env.example  CLAUDE.md  app.py  (+4 more)
14_multimodal_rag/: multimodal_rag.ipynb
15_Reasoning_Model_Fine_Tuning/: .gitignore  01_Reasoning_Fine_Tuning_Unsloth_GRPO.ipynb
(+8 files in other folders)
